Added classes to header index.html

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <!-- Верхня лінія - "Сайтбар" -->
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a class="site-logo" href="./index.html">Web<span class="site-logo__second-half">Studio</span></a>
 
-            <ul>
-                <li><a href="./index.html">Студія</a></li>
-                <li><a href="./index.html">Портфоліо</a></li>
-                <li><a href="./index.html">Контакти</a></li>
+            <ul class="site-nav">
+                <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Студія</a></li>
+                <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Портфоліо</a></li>
+                <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Контакти</a></li>
             </ul>
         </nav>
 
-        <ul>
-            <li>
-                <a class="" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="contacts">
+            <li class="contacts_item">
+                <a class="contacts__mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
-                <a class="" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="contacts_item">
+                <a class="contacts__tel" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -115,18 +115,18 @@
     </main>
     <!-- Підвал -->
     <footer>
-        <a href="./index.html">WebStudio</a>
-        <address>
-            <ul>
+        <a class="site-logo" href="./index.html">WebStudio</a>
+        <address class="address">
+            <ul class="contacts">
                 <li>
-                    <a href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank" title="Подивитися на мапі"
+                    <a class="contacts__map" href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank" title="Подивитися на мапі"
                         rel="noreferrer noopener nofollow">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="contacts__mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="contacts__tel" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
