Fix name classes to "site-logo"

--- a/index.html
+++ b/index.html
@@ -115,17 +115,17 @@
     </main>
     <!-- Підвал -->
     <footer>
-        <a class="site-logo" href="./index.html">WebStudio</a>
-        <address class="address">
+        <a class="site-logo" href="./index.html">Web<span class="site-logo__second-half">Studio</span></a>
+        <address>
             <ul class="contacts">
-                <li>
+                <li class="contacts_item">
                     <a class="contacts__map" href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank" title="Подивитися на мапі"
                         rel="noreferrer noopener nofollow">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
-                <li>
+                <li class="contacts_item">
                     <a class="contacts__mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="contacts_item">
                     <a class="contacts__tel" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
