Hidden the title of  one of the sections of the page "index.html".

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </section>
         <!-- Особливості -->
         <section>
-            <h2>Особливості нашої робори</h2>
-            <!-- Этот заголовок нужно будет "спрятать" при оформлении CSS, т.к. его нет в макете -->
+            <h2 hidden>Особливості нашої робори</h2>
+            <!-- Этот заголовок "спрятан", т.к. его нет в макете -->
             <ul>
                 <li>
                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
