Add first code to portfolio.html & styles.css

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 
             <ul class="site-nav">
                 <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Студія</a></li>
-                <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Портфоліо</a></li>
+                <li class="site-nav__item"><a class="site-nav__link" href="./portfolio.html">Портфоліо</a></li>
                 <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Контакти</a></li>
             </ul>
         </nav>
 
         <ul class="contacts">
-            <li class="contacts_item">
-                <a class="contacts__mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="contacts__item">
+                <a class="contacts__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="contacts_item">
-                <a class="contacts__tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="contacts__item">
+                <a class="contacts__link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
-    <!-- Основна частина сторінки -->
+    <!-- Основна частина головної сторінки сайту -->
     <main>
         <!-- Шапка -->
         <section>
@@ -119,15 +119,15 @@
         <a class="site-logo" href="./index.html">Web<span class="site-logo__second-half">Studio</span></a>
         <address>
             <ul class="contacts">
-                <li class="contacts_item">
-                    <a class="contacts__map" href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank" title="Подивитися на мапі"
+                <li class="contacts__item">
+                    <a class="contacts__link" href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank" title="Подивитися на мапі"
                         rel="noreferrer noopener nofollow">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
-                <li class="contacts_item">
-                    <a class="contacts__mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <li class="contacts__item">
+                    <a class="contacts__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li class="contacts_item">
-                    <a class="contacts__tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                <li class="contacts__item">
+                    <a class="contacts__link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
