--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 <!-- Верхня лінія - "Сайтбар" -->
 <header>
     <nav>
-        <a class="site-logo" href="./index.html">Web<span class="site-logo__second-half">Studio</span></a>
+        <a class="logo" href="./index.html">Web<span class="logo__second-half">Studio</span></a>
 
         <ul class="site-nav">
             <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Студія</a></li>
@@ -37,7 +37,7 @@
 
 <!-- Підвал -->
 <footer>
-    <a class="site-logo" href="./index.html">Web<span class="site-logo__second-half">Studio</span></a>
+    <a class="logo" href="./index.html">Web<span class="logo__second-half">Studio</span></a>
     <address>
         <ul class="contacts">
             <li class="contacts__item">
