--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <nav>
             <a class="logo" href="./index.html">Web<span class="logo__second-half">Studio</span></a>
 
-            <ul class="site-nav">
+            <ul class="site-nav list">
                 <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Студія</a></li>
                 <li class="site-nav__item"><a class="site-nav__link" href="./portfolio.html">Портфоліо</a></li>
                 <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Контакти</a></li>
             </ul>
         </nav>
 
-        <ul class="contacts">
+        <ul class="contacts list">
             <li class="contacts__item">
                 <a class="contacts__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
@@ -32,38 +32,38 @@
     </header>
     <!-- Основна частина головної сторінки сайту -->
     <main>
-        <!-- Шапка -->
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
+        <!-- Шапка - "Hero" -->
+        <section class="hero">
+            <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
             <button type="button">Замовити послугу</button>
         </section>
-        <!-- Особливості -->
-        <section>
-            <h2 hidden>Особливості нашої робори</h2>
+        <!-- Особливості - "Peculiarities" -->
+        <section class="section">
+            <h2 class="section__title" hidden>Особливості нашої робори</h2>
             <!-- Этот заголовок "спрятан", т.к. его нет в макете -->
-            <ul>
+            <ul class="peculiarities-list list">
                 <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <h3 class="peculiarities-list__title">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>
                         Ідейні міркування, і навіть початок повсякденної роботи з
                         формування позиції.
                     </p>
                 </li>
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <h3 class="peculiarities-list__title">ПУНКТУАЛЬНІСТЬ</h3>
                     <p>
                         Завдання організації, особливо рамки і місце навчання кадрів тягне
                         у себе.
                     </p>
                 </li>
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
+                    <h3 class="peculiarities-list__title">ПЛАНУВАННЯ</h3>
                     <p>
                         Так само консультація з широким активом значною мірою зумовлює.
                     </p>
                 </li>
                 <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <h3 class="peculiarities-list__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p>
                         Значимість цих проблем настільки очевидна, що реалізація планових
                         завдань.
@@ -72,9 +72,9 @@
             </ul>
         </section>
         <!-- Чим ми займаємося -->
-        <section>
-            <h2>Чим ми займаємося</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section__title">Чим ми займаємося</h2>
+            <ul class="list">
                 <li>
                     <img src="./images/what_we_do-1_o.jpg" alt="Складаємо алгоритми та пишимо код сайтів" width="370" />
                 </li>
@@ -88,9 +88,9 @@
             </ul>
         </section>
         <!-- Наша команда -->
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section__title">Наша команда</h2>
+            <ul class="list">
                 <li>
                     <img src="./images/photo_ihor_demyanenko_o.jpg" alt="Світлина Ігоря Демя'ненко" width="270" />
                     <h3>Ігор Дем'яненко</h3>
@@ -118,7 +118,7 @@
     <footer>
         <a class="logo" href="./index.html">Web<span class="logo__second-half">Studio</span></a>
         <address>
-            <ul class="contacts">
+            <ul class="contacts list">
                 <li class="contacts__item">
                     <a class="contacts__link" href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank" title="Подивитися на мапі"
                         rel="noreferrer noopener nofollow">м. Київ, пр-т Лесі Українки, 26</a>
