--- a/portfolio.html
+++ b/portfolio.html
@@ -15,14 +15,14 @@
     <nav>
         <a class="logo" href="./index.html">Web<span class="logo__second-half">Studio</span></a>
 
-        <ul class="site-nav">
+        <ul class="site-nav list">
             <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Студія</a></li>
             <li class="site-nav__item"><a class="site-nav__link" href="./portfolio.html">Портфоліо</a></li>
             <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Контакти</a></li>
         </ul>
     </nav>
 
-    <ul class="contacts">
+    <ul class="contacts list">
         <li class="contacts__item">
             <a class="contacts__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -39,7 +39,7 @@
 <footer>
     <a class="logo" href="./index.html">Web<span class="logo__second-half">Studio</span></a>
     <address>
-        <ul class="contacts">
+        <ul class="contacts list">
             <li class="contacts__item">
                 <a class="contacts__link" href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank"
                     title="Подивитися на мапі" rel="noreferrer noopener nofollow">м. Київ, пр-т Лесі Українки, 26</a>
