--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <!-- Верхня лінія - "Сайтбар" -->
     <header>
         <nav>
-            <a class="logo" href="./index.html">Web<span class="logo__second-half">Studio</span></a>
+            <a class="logo" href="./index.html">Web<span class="logo-second-half">Studio</span></a>
 
             <ul class="site-nav list">
-                <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Студія</a></li>
-                <li class="site-nav__item"><a class="site-nav__link" href="./portfolio.html">Портфоліо</a></li>
-                <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Контакти</a></li>
+                <li class="site-nav-item"><a class="site-nav-link" href="./index.html">Студія</a></li>
+                <li class="site-nav-item"><a class="site-nav-link" href="./portfolio.html">Портфоліо</a></li>
+                <li class="site-nav-item"><a class="site-nav-link" href="./index.html">Контакти</a></li>
             </ul>
         </nav>
 
         <ul class="contacts list">
-            <li class="contacts__item">
-                <a class="contacts__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="contacts-item">
+                <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="contacts__item">
-                <a class="contacts__link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="contacts-item">
+                <a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -34,36 +34,36 @@
     <main>
         <!-- Шапка - "Hero" -->
         <section class="hero">
-            <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
             <button type="button">Замовити послугу</button>
         </section>
         <!-- Особливості - "Peculiarities" -->
         <section class="section">
-            <h2 class="section__title" hidden>Особливості нашої робори</h2>
+            <h2 class="section-title" hidden>Особливості нашої робори</h2>
             <!-- Этот заголовок "спрятан", т.к. его нет в макете -->
             <ul class="peculiarities-list list">
                 <li>
-                    <h3 class="peculiarities-list__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <h3 class="peculiarities-list-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>
                         Ідейні міркування, і навіть початок повсякденної роботи з
                         формування позиції.
                     </p>
                 </li>
                 <li>
-                    <h3 class="peculiarities-list__title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <h3 class="peculiarities-list-title">ПУНКТУАЛЬНІСТЬ</h3>
                     <p>
                         Завдання організації, особливо рамки і місце навчання кадрів тягне
                         у себе.
                     </p>
                 </li>
                 <li>
-                    <h3 class="peculiarities-list__title">ПЛАНУВАННЯ</h3>
+                    <h3 class="peculiarities-list-title">ПЛАНУВАННЯ</h3>
                     <p>
                         Так само консультація з широким активом значною мірою зумовлює.
                     </p>
                 </li>
                 <li>
-                    <h3 class="peculiarities-list__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <h3 class="peculiarities-list-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p>
                         Значимість цих проблем настільки очевидна, що реалізація планових
                         завдань.
@@ -73,7 +73,7 @@
         </section>
         <!-- Чим ми займаємося -->
         <section class="section">
-            <h2 class="section__title">Чим ми займаємося</h2>
+            <h2 class="section-title">Чим ми займаємося</h2>
             <ul class="list">
                 <li>
                     <img src="./images/what_we_do-1_o.jpg" alt="Складаємо алгоритми та пишимо код сайтів" width="370" />
@@ -89,7 +89,7 @@
         </section>
         <!-- Наша команда -->
         <section class="section">
-            <h2 class="section__title">Наша команда</h2>
+            <h2 class="section-title">Наша команда</h2>
             <ul class="list">
                 <li>
                     <img src="./images/photo_ihor_demyanenko_o.jpg" alt="Світлина Ігоря Демя'ненко" width="270" />
@@ -116,18 +116,18 @@
     </main>
     <!-- Підвал -->
     <footer>
-        <a class="logo" href="./index.html">Web<span class="logo__second-half">Studio</span></a>
+        <a class="logo" href="./index.html">Web<span class="logo-second-half">Studio</span></a>
         <address>
             <ul class="contacts list">
-                <li class="contacts__item">
-                    <a class="contacts__link" href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank" title="Подивитися на мапі"
+                <li class="contacts-item">
+                    <a class="contacts-link" href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank" title="Подивитися на мапі"
                         rel="noreferrer noopener nofollow">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
-                <li class="contacts__item">
-                    <a class="contacts__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <li class="contacts-item">
+                    <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li class="contacts__item">
-                    <a class="contacts__link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <li class="contacts-item">
+                    <a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
