--- a/portfolio.html
+++ b/portfolio.html
@@ -13,21 +13,21 @@
 <!-- Верхня лінія - "Сайтбар" -->
 <header>
     <nav>
-        <a class="logo" href="./index.html">Web<span class="logo__second-half">Studio</span></a>
+        <a class="logo" href="./index.html">Web<span class="logo-second-half">Studio</span></a>
 
         <ul class="site-nav list">
-            <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Студія</a></li>
-            <li class="site-nav__item"><a class="site-nav__link" href="./portfolio.html">Портфоліо</a></li>
-            <li class="site-nav__item"><a class="site-nav__link" href="./index.html">Контакти</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="./index.html">Студія</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="site-nav-item"><a class="site-nav-link" href="./index.html">Контакти</a></li>
         </ul>
     </nav>
 
     <ul class="contacts list">
-        <li class="contacts__item">
-            <a class="contacts__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <li class="contacts-item">
+            <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li class="contacts__item">
-            <a class="contacts__link" href="tel:+380961111111">+38 096 111 11 11</a>
+        <li class="contacts-item">
+            <a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
     </ul>
 </header>
@@ -37,18 +37,18 @@
 
 <!-- Підвал -->
 <footer>
-    <a class="logo" href="./index.html">Web<span class="logo__second-half">Studio</span></a>
+    <a class="logo" href="./index.html">Web<span class="logo-second-half">Studio</span></a>
     <address>
         <ul class="contacts list">
-            <li class="contacts__item">
-                <a class="contacts__link" href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank"
+            <li class="contacts-item">
+                <a class="contacts-link" href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank"
                     title="Подивитися на мапі" rel="noreferrer noopener nofollow">м. Київ, пр-т Лесі Українки, 26</a>
             </li>
-            <li class="contacts__item">
-                <a class="contacts__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="contacts-item">
+                <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="contacts__item">
-                <a class="contacts__link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="contacts-item">
+                <a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </address>
