Аdd some classes at styles.css

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <!-- Верхня лінія - "Сайтбар" -->
     <header>
         <nav>
-            <a class="logo" href="./index.html">Web<span class="logo-second-half">Studio</span></a>
+            <a class="logo" href="./index.html">Web<span class="logo-second-half-head">Studio</span></a>
 
             <ul class="site-nav list">
-                <li class="site-nav-item"><a class="site-nav-link" href="./index.html">Студія</a></li>
+                <li class="site-nav-item"><a class="site-nav-link current-position" href="./index.html">Студія</a></li>
                 <li class="site-nav-item"><a class="site-nav-link" href="./portfolio.html">Портфоліо</a></li>
                 <li class="site-nav-item"><a class="site-nav-link" href="./index.html">Контакти</a></li>
             </ul>
         </nav>
 
-        <ul class="contacts list">
-            <li class="contacts-item">
-                <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="list">
+            <li>
+                <a class="contacts-head" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="contacts-item">
-                <a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li>
+                <a class="contacts-head" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -35,7 +35,7 @@
         <!-- Шапка - "Hero" -->
         <section class="hero">
             <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+            <button class="herro-button" type="button">Замовити послугу</button>
         </section>
         <!-- Особливості - "Peculiarities" -->
         <section class="section">
@@ -88,46 +88,46 @@
             </ul>
         </section>
         <!-- Наша команда -->
-        <section class="section">
+        <section class="section section-highlighted">
             <h2 class="section-title">Наша команда</h2>
-            <ul class="list">
+            <ul class="team list">
                 <li>
                     <img src="./images/photo_ihor_demyanenko_o.jpg" alt="Світлина Ігоря Демя'ненко" width="270" />
-                    <h3>Ігор Дем'яненко</h3>
+                    <h3 class="team-name">Ігор Дем'яненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/photo_olga_repina_o.jpg" alt="Світлина Ольги Рєпіної" width="270" />
-                    <h3>Ольга Рєпіна</h3>
+                    <h3 class="team-name">Ольга Рєпіна</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/photo_mykola_tarasov_o.jpg" alt="Світлина Миколи Тарасова" width="270" />
-                    <h3>Микола Тарасов</h3>
+                    <h3 class="team-name">Микола Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/photo_mykhailo_yermakov_o.jpg" alt="Світлина Михайла Єрмакова" width="270" />
-                    <h3>Михайло Єрмаков</h3>
+                    <h3 class="team-name">Михайло Єрмаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <!-- Підвал -->
-    <footer>
-        <a class="logo" href="./index.html">Web<span class="logo-second-half">Studio</span></a>
+    <footer class="footer">
+        <a class="logo" href="./index.html">Web<span class="logo-second-half-foot">Studio</span></a>
         <address>
             <ul class="contacts list">
                 <li class="contacts-item">
-                    <a class="contacts-link" href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank" title="Подивитися на мапі"
+                    <a class="contacts-map" href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank" title="Подивитися на мапі"
                         rel="noreferrer noopener nofollow">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
                 <li class="contacts-item">
-                    <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="contacts-foot" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li class="contacts-item">
-                    <a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="contacts-foot" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
