--- a/portfolio.html
+++ b/portfolio.html
@@ -13,42 +13,133 @@
 <!-- Верхня лінія - "Сайтбар" -->
 <header>
     <nav>
-        <a class="logo" href="./index.html">Web<span class="logo-second-half">Studio</span></a>
+        <a class="logo" href="./index.html">Web<span class="logo-second-half-head">Studio</span></a>
 
         <ul class="site-nav list">
             <li class="site-nav-item"><a class="site-nav-link" href="./index.html">Студія</a></li>
-            <li class="site-nav-item"><a class="site-nav-link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="site-nav-item"><a class="site-nav-link current-position" href="./portfolio.html">Портфоліо</a></li>
             <li class="site-nav-item"><a class="site-nav-link" href="./index.html">Контакти</a></li>
         </ul>
     </nav>
 
     <ul class="contacts list">
         <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contacts-head" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li class="contacts-item">
-            <a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="contacts-head" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
     </ul>
 </header>
 
 <!-- Основна частина сторінки "Портфоліо" -->
-<main></main>
+<main>
+    <section>
+        <h1 hidden>Наші роботи</h1> <!-- Этот заголовок спрятан, т.к. его нет в макете -->
+            <ul class="portfolio-filtr list">
+                <li>
+                    <batton class="portfolio-batton" type="batton">Усі</batton>
+                </li>
+                <li>
+                    <batton class="portfolio-batton" type="batton">Веб-сайти</batton>
+                </li>
+                <li>
+                    <batton class="portfolio-batton" type="batton">Додатки</batton>
+                </li>
+                <li>
+                    <batton class="portfolio-batton" type="batton">Дизайн</batton>
+                </li>
+                <li>
+                    <batton class="portfolio-batton" type="batton">Маркетинг</batton>
+                </li>
+            </ul>
+            
+            <ul class="list">
+                <li>
+                    <a class="link" href="">
+                        <img src="" alt="">
+                        <h2>Технокряк</h2>
+                        <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="">
+                        <h2>Постер New Orlean vs Golden Star</h2>
+                        <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="">
+                        <h2>Ресторан Seafood</h2>
+                        <p>Додаток</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="">
+                        <h2>Проєкт Prime</h2>
+                        <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="">
+                        <h2>Проєкт Boxes</h2>
+                        <p>Додаток</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="">
+                        <h2>Inspiration has no Borders</h2>
+                        <p>Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="">
+                        <h2>Видання Limited Edition</h2>
+                        <p>Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="" alt="">
+                        <h2>Проєкт LAB</h2>
+                        <p>Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                    <img src="" alt="">
+                    <h2>Growing Business</h2>
+                    <p>Додаток</p>
+                </a>
+                </li>
+            </ul>
+
+
+    </section>
+
+
+</main>
 
 <!-- Підвал -->
-<footer>
-    <a class="logo" href="./index.html">Web<span class="logo-second-half">Studio</span></a>
+<footer class="footer">
+    <a class="logo" href="./index.html">Web<span class="logo-second-half-foot">Studio</span></a>
     <address>
         <ul class="contacts list">
             <li class="contacts-item">
-                <a class="contacts-link" href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank"
+                <a class="contacts-map" href="https://goo.gl/maps/zJNhpAb7FdGBm95CA" target="_blank"
                     title="Подивитися на мапі" rel="noreferrer noopener nofollow">м. Київ, пр-т Лесі Українки, 26</a>
             </li>
             <li class="contacts-item">
-                <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="contacts-foot" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="contacts-item">
-                <a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="contacts-foot" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </address>
