Аdd imeges and code in portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,63 +57,63 @@
             <ul class="list">
                 <li>
                     <a class="link" href="">
-                        <img src="" alt="">
+                        <img src="./images/technocrack_o.jpg" alt="Світлини трьох людей, які мають власний погляд на Web-індустрію">
                         <h2>Технокряк</h2>
                         <p>Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="./images/poster_new-orlean_vs_golden-star_o.jpg" alt="Двоє баскетболістів борються за м'яч">
                         <h2>Постер New Orlean vs Golden Star</h2>
                         <p>Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="./images/restaurant_seafood_o.jpg" alt="Назва ресторану 'Seafood' на фоні малюнка риби">
                         <h2>Ресторан Seafood</h2>
                         <p>Додаток</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="./images/project_prime_o.jpg" alt="Акустичні навушники">
                         <h2>Проєкт Prime</h2>
                         <p>Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="./images/project_boxes_o.jpg" alt="Декілька картоних коробок">
                         <h2>Проєкт Boxes</h2>
                         <p>Додаток</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="./images/inspiration_has_no_borders_o.jpg" alt="Мапа нашої планети разом з написом 'Inspiration has no Borders'">
                         <h2>Inspiration has no Borders</h2>
                         <p>Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="./images/edition_limited_edition_o.jpg" alt="Розгорнута книга на розвороті котрої наведено напис - 'I'am Limited Edition'">
                         <h2>Видання Limited Edition</h2>
                         <p>Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="" alt="">
+                        <img src="./images/project_lab_o.jpg" alt="Бірка з написом 'LAB EL TAG'">
                         <h2>Проєкт LAB</h2>
                         <p>Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                    <img src="" alt="">
+                    <img src="./images/growing_business_o.jpg" alt="Руки людини натискають на клавіші ноутбука, на екрані котрого відображено напис - 'Growing Business'">
                     <h2>Growing Business</h2>
                     <p>Додаток</p>
                 </a>
