--- a/portfolio.html
+++ b/portfolio.html
@@ -40,19 +40,19 @@
         <h1 hidden>Наші роботи</h1> <!-- Этот заголовок спрятан, т.к. его нет в макете -->
             <ul class="list">
                 <li>
-                    <button class="portfolio-batton" type="button">Усі</button>
+                    <button class="portfolio-button" type="button">Усі</button>
                 </li>
                 <li>
-                    <button class="portfolio-batton" type="button">Веб-сайти</button>
+                    <button class="portfolio-button" type="button">Веб-сайти</button>
                 </li>
                 <li>
-                    <button class="portfolio-batton" type="button">Додатки</button>
+                    <button class="portfolio-button" type="button">Додатки</button>
                 </li>
                 <li>
-                    <button class="portfolio-batton" type="button">Дизайн</button>
+                    <button class="portfolio-button" type="button">Дизайн</button>
                 </li>
                 <li>
-                    <button class="portfolio-batton" type="button">Маркетинг</button>
+                    <button class="portfolio-button" type="button">Маркетинг</button>
                 </li>
             </ul>
             
