--- a/index.html
+++ b/index.html
@@ -96,22 +96,22 @@
         <section class="section-highlighted">
             <h2 class="section-title">Наша команда</h2>
             <ul class="list">
-                <li>
+                <li class="team-item">
                     <img src="./images/photo_ihor_demyanenko_o.jpg" alt="Світлина Ігоря Демя'ненко" width="270" />
                     <h3 class="team-name">Ігор Дем'яненко</h3>
                     <p class="team-position" lang="en">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/photo_olga_repina_o.jpg" alt="Світлина Ольги Рєпіної" width="270" />
                     <h3 class="team-name">Ольга Рєпіна</h3>
                     <p class="team-position" lang="en">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/photo_mykola_tarasov_o.jpg" alt="Світлина Миколи Тарасова" width="270" />
                     <h3 class="team-name">Микола Тарасов</h3>
                     <p class="team-position" lang="en">Marketing</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="./images/photo_mykhailo_yermakov_o.jpg" alt="Світлина Михайла Єрмакова" width="270" />
                     <h3 class="team-name">Михайло Єрмаков</h3>
                     <p class="team-position" lang="en">UI Designer</p>
