Fix text tabuletion on peculiarities-list-title and add utility class 'visually-hidden' to hiden titles

--- a/index.html
+++ b/index.html
@@ -44,30 +44,30 @@
         
         <!-- Особливості - "Peculiarities" -->
         <section>
-            <h2 class="section-title" hidden>Особливості нашої робори</h2>
+            <h2 class="section-title visually-hidden">Особливості нашої робори</h2>
             <!-- Этот заголовок "спрятан", т.к. его нет в макете -->
             <ul class="list">
                 <li>
-                    <h3 class="peculiarities-list-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <h3 class="peculiarities-list-title">Увага до деталей</h3>
                     <p class="peculiarities-list-text">
                         Ідейні міркування, і навіть початок повсякденної роботи з
                         формування позиції.
                     </p>
                 </li>
                 <li>
-                    <h3 class="peculiarities-list-title">ПУНКТУАЛЬНІСТЬ</h3>
+                    <h3 class="peculiarities-list-title">Пунктуальність</h3>
                     <p class="peculiarities-list-text">
                         Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                     </p>
                 </li>
                 <li>
-                    <h3 class="peculiarities-list-title">ПЛАНУВАННЯ</h3>
+                    <h3 class="peculiarities-list-title">Планування</h3>
                     <p class="peculiarities-list-text">
                         Так само консультація з широким активом значною мірою зумовлює.
                     </p>
                 </li>
                 <li>
-                    <h3 class="peculiarities-list-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <h3 class="peculiarities-list-title">Сучасні технології</h3>
                     <p class="peculiarities-list-text">
                         Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                     </p>
