--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
 <!-- Основна частина сторінки "Портфоліо" -->
 <main>
     <section>
-        <h1 hidden>Наші роботи</h1> <!-- Этот заголовок спрятан, т.к. его нет в макете -->
+        <h1 class="visually-hidden">Наші роботи</h1> <!-- Этот заголовок спрятан, т.к. его нет в макете -->
             <ul class="list">
                 <li>
                     <button class="portfolio-button" type="button">Усі</button>
